[package]
name = "list-proc"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
debug = false
panic = "abort"

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
scopeguard = "1.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["net", "signal", "rt", "io-util", "process", "macros", "sync"] }
